fix googlefonts problem and menu styles

--- a/src/style/components/_navbar.scss
+++ b/src/style/components/_navbar.scss
@@ -173,6 +173,7 @@
 
         span {
             font-family: 'Poppins';
+            color: $primary;
             font-weight: 600;
             margin-left: .5em;
         }
